--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,17 +17,17 @@
     <body>
         <header>
 
-            <a href="#" class="logo"><i class="fas fa-utensils"></i>food</a>
+            <a href="{{ path('home') }}" class="logo"><i class="fas fa-utensils"></i>Food</a>
             <div id="menu-bar" class="fas fa-bars"></div>
 
             <nav class="navbar">
-                <a href="{{ path('home') }}">accueil</a>
-                <a href="#speciality">specialités</a>
-                <a href="#popular">populaire</a>
-                <a href="#card_menu">notre carte</a>
-                <a href="#gallery">galerie</a>
-                <a href="#review">avis</a>
-                <a class="cart" href="{{ path('cart') }}"><ion-icon name="basket"></ion-icon>panier <span>0</span></a>       
+                <a href="#">Accueil</a>
+                <a href="#speciality">Specialités</a>
+                <a href="#popular">Populaire</a>
+                <a href="#card_menu">Notre carte</a>
+                <a href="#gallery">Galerie</a>
+                <a href="#review">Avis</a>
+                <a class="cart" href="{{ path('cart') }}"><ion-icon name="basket"></ion-icon>Panier <span>0</span></a>       
                 <a class="login" href=""><img src="{{ asset('build/images/login.png') }}" alt="login"></a>
                 <a class="register" href=""><img src="{{ asset('build/images/register.png') }}" alt="register"></a>
             </nav>
@@ -42,9 +42,9 @@
         <section class="footer">
 
             <div class="share">
-                <a href="#" class="btn">facebook</a>
-                <a href="#" class="btn">twitter</a>
-                <a href="#" class="btn">linkedin</a>
+                <a href="#" class="btn">Facebook</a>
+                <a href="#" class="btn">Twitter</a>
+                <a href="#" class="btn">Linkedin</a>
             </div>
 
             <h1 class="credit"> © copyright <span> Bigey, Colez, Lhorens </span> | tout droit reservé </h1>
