--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -67,7 +67,7 @@
             <img class="image" src="{{ asset('build/images/boisson-CF.png') }}" alt="">
             <div class="content">
                 <img src="{{ asset('build/images/s-6.png') }}" alt=""><img src="{{ asset('build/images/s-4.png') }}" alt="">
-                <h3>boisson chaude et boisson froide</h3>
+                <h3>Boissons chaudes et boissons froides</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
@@ -128,7 +128,7 @@
         <div class="box">
             <span class="price"> 5€</span>
             <img src="{{ asset('build/images/burger/hamburger.jpg') }}" alt="">
-            <h3>hamburger</h3>
+            <h3>Hamburger</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -416,7 +416,7 @@
               <img src = "foods/pizza/courgette.jpg" alt = "food image">
             </div>
             <div class = "food-content">
-              <h2 class = "food-name">courgette mozzarella</h2>
+              <h2 class = "food-name">Courgette mozzarella</h2>
               <div class = "line"></div>
               <h3 class = "food-price">9.00 €</h3>
               <ul class = "rating">
@@ -439,7 +439,7 @@
               <img src = "foods/pizza/poivron.jpg" alt = "food image">
             </div>
             <div class = "food-content">
-              <h2 class = "food-name">poivron brocoli</h2>
+              <h2 class = "food-name">Poivron brocoli</h2>
               <div class = "line"></div>
               <h3 class = "food-price">9.00 €</h3>
               <ul class = "rating">
@@ -574,7 +574,7 @@
               <img src = "foods/salade/salade_piemontaise.jpg" alt = "food image">
             </div>
             <div class = "food-content">
-              <h2 class = "food-name">salade de piemontaise</h2>
+              <h2 class = "food-name">Salade de piemontaise</h2>
               <div class = "line"></div>
               <h3 class = "food-price">6.00 € </h3>
               <ul class = "rating">
@@ -872,7 +872,7 @@
               <img src = "foods/pizza/courgette.jpg" alt = "food image">
             </div>
             <div class = "food-content">
-              <h2 class = "food-name">courgette mozzarella</h2>
+              <h2 class = "food-name">Courgette mozzarella</h2>
               <div class = "line"></div>
               <h3 class = "food-price">9.00 €</h3>
               <ul class = "rating">
@@ -895,7 +895,7 @@
               <img src = "foods/pizza/poivron.jpg" alt = "food image">
             </div>
             <div class = "food-content">
-              <h2 class = "food-name">poivron brocoli</h2>
+              <h2 class = "food-name">Poivron brocoli</h2>
               <div class = "line"></div>
               <h3 class = "food-price">9.00 €</h3>
               <ul class = "rating">
@@ -970,13 +970,13 @@
 
 <div class="step-container">
 
-    <h1 class="heading">le <span>fonctionnement</span></h1>
+    <h1 class="heading">Le <span>fonctionnement</span></h1>
 
     <section class="steps">
 
         <div class="box">
             <img src="{{ asset('build/images/step-1.jpg') }}" alt="">
-            <h3>choisissez votre plat</h3>
+            <h3>Choisissez votre plat</h3>
         </div>
         <div class="box">
             <img src="{{ asset('build/images/step-3.jpg') }}" alt="">
@@ -997,7 +997,7 @@
 
 <section class="gallery" id="gallery">
 
-    <h1 class="heading"> notre <span> galerie </span> </h1>
+    <h1 class="heading"> Notre <span> galerie </span> </h1>
 
     <div class="box-container">
 
@@ -1036,7 +1036,7 @@
         <div class="box">
             <img src="{{ asset('build/images/boisson/coca.jpg') }}" alt="">
             <div class="content">
-                <h3>coca-cola</h3>
+                <h3>Coca-cola</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
                 
             </div>
@@ -1084,13 +1084,13 @@
 
 <section class="review" id="review">
 
-    <h1 class="heading"> vos <span>avis</span> comptent pour nous ! </h1>
+    <h1 class="heading"> Vos <span>avis</span> comptent pour nous ! </h1>
 
     <div class="box-container">
 
         <div class="box">
             <img src="{{ asset('build/images/pic1.png') }}" alt="">
-            <h3>john deo</h3>
+            <h3>John Deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -1102,7 +1102,7 @@
         </div>
         <div class="box">
             <img src="{{ asset('build/images/pic2.png') }}" alt="">
-            <h3>john deo</h3>
+            <h3>John Deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -1114,7 +1114,7 @@
         </div>
         <div class="box">
             <img src="{{ asset('build/images/pic3.png') }}" alt="">
-            <h3>john deo</h3>
+            <h3>John Deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
