uptdate admin user

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,16 +4,22 @@
 {% endblock %}
 
 {% block body %}
-	<section style="margin-top:70px">
-		<h1>Register</h1>
-
-		{{ form_start(registrationForm) }}
-		{{ form_row(registrationForm.email) }}
-		{{ form_row(registrationForm.plainPassword, {
+	<section class="register_form">
+	<div class="formulaire">
+		<div class="title_Register">
+			<h1 class="heading">S'enregistrer</h1>
+		</div>
+		<div class="form heading">
+			{{ form_start(registrationForm) }}
+			{{ form_row(registrationForm.email) }}
+			{{ form_row(registrationForm.plainPassword, {
             label: 'Password'
-        }) }}
-
-		<button type="submit" class="btn">Register</button>
+        	}) }}
+		</div>
+	
+		<button type="submit" class="btn button_register">Envoi la sauce !</button>
 		{{ form_end(registrationForm) }}
+	</div>	
+		
 	</section>
 {% endblock %}
