--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																				           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																														           and uncomment the following Encore helpers to start using Symfony UX #}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -36,8 +36,14 @@
 					<span>0</span>
 				</a>.
 				{% if app.user %}
-					<a class="login" href="{{ path('app_login') }}">Profil</a>
+					{% if not is_granted('ROLE_ADMIN') %}
+						<a class="login" href="{{ path('user_profile') }}">Profil</a>
+					{% endif %}
+					{% if is_granted('ROLE_ADMIN') %}
+						<a class="login" href="{{ path('admin_profile') }}">Admin</a>
+					{% endif %}
 					<a class="register" href="{{ path('app_logout') }}">Deconnexion</a>
+
 				{% else %}
 					<a class="login" href="{{ path('app_login') }}">Connexion</a>
 					<a class="register" href="{{ path('app_register') }}">S'enregistrer</a>
@@ -55,9 +61,9 @@
 		<section class="footer">
 
 			<div class="share">
-				<a href="#" class="btn">facebook</a>
-				<a href="#" class="btn">twitter</a>
-				<a href="#" class="btn">linkedin</a>
+				<a href="https://www.facebook.com" class="btn">facebook</a>
+				<a href="https://twitter.com" class="btn">twitter</a>
+				<a href="https://www.linkedin.com" class="btn">linkedin</a>
 			</div>
 
 			<h1 class="credit">
