--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1134,12 +1134,10 @@
 <!-- scroll top button  -->
 <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
 
-<!-- loader  -->
+<!-- loader  
 <div class="loader-container">
     <img src="{{ asset('build/images/loader.gif') }}" alt="">
-</div>
-
-
+</div>  -->
 
 
 
