--- a/templates/admin/profile.html.twig
+++ b/templates/admin/profile.html.twig
@@ -26,13 +26,13 @@
                     </div>
                     <div class="les_trois_boutons">
                         <div class="gerer_produits">
-                            <button type="submit" class="btn">Gérer produits</button>
+                            <a href="d" class="btn">Gérer produits</a>
                         </div>
                         <div class="gerer_categories">
-                            <button type="submit" class="btn">gérer catégories</button>
+                            <a href="d" class="btn">gérer catégories</a>
                         </div>
                         <div class="dernieres_commandes">
-                            <button type="submit" class="btn">dernières commandes</button>
+                            <a href="d" class="btn">dernières commandes</a>
                         </div>
                     </div>
                 </div>
