--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -12,7 +12,7 @@
     <div class="content">
         <h3>Cuisine faite avec amour et passion!</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas accusamus tempore temporibus rem amet laudantium animi optio voluptatum. Natus obcaecati unde porro nostrum ipsam itaque impedit incidunt rem quisquam eos!</p>
-        <a href="#card_menu" class="btn">commander</a>
+        <a href="#card_menu" class="btn">Commander</a>
     </div>
 
     <div class="image">
@@ -27,7 +27,7 @@
 
 <section class="speciality" id="speciality">
 
-    <h1 class="heading"> nos <span>specialités</span> </h1>
+    <h1 class="heading"> Nos <span>specialités</span> </h1>
 
     <div class="box-container">
 
@@ -67,7 +67,7 @@
             <img class="image" src="{{ asset('build/images/boisson-CF.png') }}" alt="">
             <div class="content">
                 <img src="{{ asset('build/images/s-6.png') }}" alt=""><img src="{{ asset('build/images/s-4.png') }}" alt="">
-                <h3>boisson chaude et boisson froide</h3>
+                <h3>Boisson chaude et boisson froide</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
@@ -976,7 +976,7 @@
 
         <div class="box">
             <img src="{{ asset('build/images/step-1.jpg') }}" alt="">
-            <h3>choisissez votre plat</h3>
+            <h3>Choisissez votre plat</h3>
         </div>
         <div class="box">
             <img src="{{ asset('build/images/step-3.jpg') }}" alt="">
@@ -997,7 +997,7 @@
 
 <section class="gallery" id="gallery">
 
-    <h1 class="heading"> notre <span> galerie </span> </h1>
+    <h1 class="heading"> Notre <span> galerie </span> </h1>
 
     <div class="box-container">
 
@@ -1036,7 +1036,7 @@
         <div class="box">
             <img src="{{ asset('build/images/boisson/coca.jpg') }}" alt="">
             <div class="content">
-                <h3>coca-cola</h3>
+                <h3>Coca-cola</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
                 
             </div>
@@ -1084,13 +1084,13 @@
 
 <section class="review" id="review">
 
-    <h1 class="heading"> vos <span>avis</span> comptent pour nous ! </h1>
+    <h1 class="heading"> Vos <span>avis</span> comptent pour nous ! </h1>
 
     <div class="box-container">
 
         <div class="box">
             <img src="{{ asset('build/images/pic1.png') }}" alt="">
-            <h3>john deo</h3>
+            <h3>John Deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -1102,7 +1102,7 @@
         </div>
         <div class="box">
             <img src="{{ asset('build/images/pic2.png') }}" alt="">
-            <h3>john deo</h3>
+            <h3>John Deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -1114,7 +1114,7 @@
         </div>
         <div class="box">
             <img src="{{ asset('build/images/pic3.png') }}" alt="">
-            <h3>john deo</h3>
+            <h3>John Deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
