--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -19,9 +19,9 @@
                 <div class="profils_name">
                     <h3 class="heading">Bonjour,</h3>
                     <div class="mb-3 heading">
-                                You are logged in as
+                                Salut !
                                 <span>{{ app.user.username }}</span>,
-                                <a href="{{ path('app_logout') }}">Logout</a>
+                                <a href="{{ path('app_logout') }}">Se déconnecter.</a>
                     </div>
                     <div class="commande">
                     <h3 class="heading">Mes commandes:</h3>
