--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>
 			{% block title %}Food Truck
 			{% endblock %}
@@ -20,19 +21,18 @@
 	<body>
 		<header>
 
-			<a href="#" class="logo">
-				<i class="fas fa-utensils"></i>food</a>
+			<a href="#" class="logo"><i class="fas fa-utensils"></i>food</a>
 			<div id="menu-bar" class="fas fa-bars"></div>
 
 			<nav class="navbar">
-				<a href="{{ path('home') }}">accueil</a>
-				<a href="#speciality">specialités</a>
-				<a href="#popular">populaire</a>
-				<a href="#card_menu">notre carte</a>
-				<a href="#gallery">galerie</a>
-				<a href="#review">avis</a>
+				<a href="{{ path('home') }}">Accueil</a>
+				<a href="#speciality">Specialités</a>
+				<a href="#popular">Populaire</a>
+				<a href="#card_menu">La carte</a>
+				<a href="#gallery">Galerie</a>
+				<a href="#review">Avis</a>
 				<a class="cart" href="{{ path('cart') }}">
-					<ion-icon name="basket"></ion-icon>panier
+					<ion-icon name="basket"></ion-icon>Panier
 					<span>0</span>
 				</a>.
 				{% if app.user %}
@@ -55,9 +55,9 @@
 		<section class="footer">
 
 			<div class="share">
-				<a href="#" class="btn">facebook</a>
-				<a href="#" class="btn">twitter</a>
-				<a href="#" class="btn">linkedin</a>
+				<a href="#" class="btn">Facebook</a>
+				<a href="#" class="btn">Twitter</a>
+				<a href="#" class="btn">Linkedin</a>
 			</div>
 
 			<h1 class="credit">
@@ -65,7 +65,7 @@
 				<span>
 					Bigey, Colez, Lhorens
 				</span>
-				| tout droit reservé
+				| Tout droit reservé
 			</h1>
 
 		</section>
