--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,9 +13,9 @@
 
 				{% if app.user %}
 					<div class="mb-3 heading">
-						You are logged in as
+						Vous etes connecté en tant que
 						<span>{{ app.user.username }}</span>,
-						<a href="{{ path('app_logout') }}">Logout</a>
+						<a href="{{ path('app_logout') }}">Se déconnecter.</a>
 					</div>
 				{% endif %}
 
