--- a/templates/admin/order.html.twig
+++ b/templates/admin/order.html.twig
@@ -2,7 +2,12 @@
 {% block title 'order' %}
 
 {% block body %}
-	<div>
-		<h5>Consulter l'historique des commandes :</h5>
-	</div>
+	<section class="page_profils">
+		<div class="border">
+			<div class="profil_title">
+				<h1 class="heading">Consulter l'historique des commandes :</h1>
+			</div>
+		</diV>
+	</section>
+
 {% endblock %}
