--- a/assets/styles/layout/general.scss
+++ b/assets/styles/layout/general.scss
@@ -1,35 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 
-:root{
-  --red:#ff3838;
+:root {
+  --red: #ff3838;
 }
 
-*{
-  font-family: 'Nunito', sans-serif;
-  margin:0; padding:0;
+* {
+  font-family: "Nunito", sans-serif;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  outline: none; border:none;
+  outline: none;
+  border: none;
   text-decoration: none;
-  
-  transition:all .2s linear;
+
+  transition: all 0.2s linear;
 }
 
-*::selection{
-  background:var(--red);
-  color:#fff;
+*::selection {
+  background: var(--red);
+  color: #fff;
 }
 
-html{
+html {
   font-size: 62.5%;
   overflow-x: hidden;
   scroll-behavior: smooth;
   scroll-padding-top: 6rem;
 }
 
-body{
-  background:#f7f7f7;
+body {
+  background: #f7f7f7;
 }
 
-section{
-  padding:2rem 9%;
+section {
+  padding: 2rem 9%;
 }
