--- a/templates/admin/profile.html.twig
+++ b/templates/admin/profile.html.twig
@@ -16,8 +16,7 @@
 						<div class="heading un">
 							<span>{{ app.user.username }}</span>
 						</div>
-						<div class="heading un">Vous avez :<span>{{ app.user.token }}</span>
-							pts</div>
+						<div class="heading un">Vous avez : 666 pts</div>
 					</div>
 				{% endif %}
 				<div class="profils_name">
@@ -25,7 +24,7 @@
 					<div class="mb-3 heading">
 						Salut !
 						<span>{{ app.user.username }}</span>,
-																																																	                                tu es connecté en tant qu'admin sale plow !
+																																																								                                tu es connecté en tant qu'admin sale plow !
 						<a href="{{ path('app_logout') }}">Logout</a>
 					</div>
 					<div class="les_trois_boutons">
