--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,20 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-<<<<<<< HEAD
-=======
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
->>>>>>> Bastien
 		<title>
 			{% block title %}Food Truck
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-<<<<<<< HEAD
-																																																																           and uncomment the following Encore helpers to start using Symfony UX #}
-=======
-																																				           and uncomment the following Encore helpers to start using Symfony UX #}
->>>>>>> Bastien
+																																																															           and uncomment the following Encore helpers to start using Symfony UX #}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -28,7 +21,6 @@
 	<body>
 		<header>
 
-<<<<<<< HEAD
 			<a href="#" class="logo">
 				<i class="fas fa-utensils"></i>food</a>
 			<div id="menu-bar" class="fas fa-bars"></div>
@@ -53,25 +45,6 @@
 					{% endif %}
 					<a class="register" href="{{ path('app_logout') }}">Deconnexion</a>
 
-=======
-			<a href="#" class="logo"><i class="fas fa-utensils"></i>food</a>
-			<div id="menu-bar" class="fas fa-bars"></div>
-
-			<nav class="navbar">
-				<a href="{{ path('home') }}">Accueil</a>
-				<a href="#speciality">Specialités</a>
-				<a href="#popular">Populaire</a>
-				<a href="#card_menu">La carte</a>
-				<a href="#gallery">Galerie</a>
-				<a href="#review">Avis</a>
-				<a class="cart" href="{{ path('cart') }}">
-					<ion-icon name="basket"></ion-icon>Panier
-					<span>0</span>
-				</a>.
-				{% if app.user %}
-					<a class="login" href="{{ path('user_profile') }}">Profil</a>
-					<a class="register" href="{{ path('app_logout') }}">Deconnexion</a>
->>>>>>> Bastien
 				{% else %}
 					<a class="login" href="{{ path('app_login') }}">Connexion</a>
 					<a class="register" href="{{ path('app_register') }}">S'enregistrer</a>
@@ -89,15 +62,9 @@
 		<section class="footer">
 
 			<div class="share">
-<<<<<<< HEAD
-				<a href="https://www.facebook.com" class="btn">facebook</a>
-				<a href="https://twitter.com" class="btn">twitter</a>
-				<a href="https://www.linkedin.com" class="btn">linkedin</a>
-=======
-				<a href="#" class="btn">Facebook</a>
-				<a href="#" class="btn">Twitter</a>
-				<a href="#" class="btn">Linkedin</a>
->>>>>>> Bastien
+				<a href="https://www.facebook.com" class="btn">Facebook</a>
+				<a href="https://twitter.com" class="btn">Twitter</a>
+				<a href="https://www.linkedin.com" class="btn">Linkedin</a>
 			</div>
 
 			<h1 class="credit">
@@ -105,11 +72,7 @@
 				<span>
 					Bigey, Colez, Lhorens
 				</span>
-<<<<<<< HEAD
-				| tout droit reservé
-=======
-				| Tout droit reservé
->>>>>>> Bastien
+				| Tout droits reservé
 			</h1>
 
 		</section>
@@ -117,8 +80,4 @@
 	{% block javascripts %}
 		{{ encore_entry_script_tags('app') }}
 	{% endblock %}
-<<<<<<< HEAD
 </html>
-=======
-</html></body></html></body></html></body></html>
->>>>>>> Bastien
