--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,8 +16,10 @@
             label: 'Password'
         	}) }}
 		</div>
-	
-		<button type="submit" class="btn button_register">Envoi la sauce !</button>
+		
+		<audio id="son1" src="{{ asset('build/images/son/sound.mp3') }}"></audio>
+		<button type="submit" class="btn button_register" id="bouton">Envoi la sauce !</button>
+		
 		{{ form_end(registrationForm) }}
 	</div>	
 		
