--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,8 @@
 						</div>
 					#}
 				<div class="button">
-					<button class="btn btn-lg btn-primary" type="submit">
+				<audio id="son1" src="{{ asset('build/images/son/login.mp3') }}"></audio>
+					<button class="btn btn-lg btn-primary" id="bouton" type="submit">
 						Se connecter
 					</button>
 				</div>
