--- a/assets/styles/layout/profils.scss
+++ b/assets/styles/layout/profils.scss
@@ -1,54 +1,3 @@
-<<<<<<< HEAD
-.page_profils{
-    margin-top: 15vh;
-}
-.profils{
-    display: flex;
-    height: 400px;
-    margin-top: 5%;
-}
-.un{
-    font-size: 1.5rem;
-}
-.img_profils{
-    width: 30%;
-    text-align: center;
-    flex-direction: column;
-    
-}
-.img_profils img{
-    width: 50%;
-    border-radius: 50%;
-    margin: auto;
-   
-    
-}
-.profils_name{
-    width: 70%;
-    text-align: center; 
-}
-.profils_name .heading{
-    font-size: 2rem;
-}
-.mb-3{
-    font-size: 2rem;
-}
-.border{
-    border: solid 2px lightgray;
-    border-radius: 10px;
-    padding-top: 5%;
-    margin-bottom: 15%;
-}
-.liste_commande{
-    font-size: 1.5rem;
-}
-
-.les_trois_boutons{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 15%;
-    flex-wrap: wrap;
-=======
 .page_profils {
   margin-top: 10%;
   min-height: 564px;
@@ -74,7 +23,7 @@
 .profils_name {
   width: 70%;
   text-align: center;
-  background-image: url(../../images/homer.gif);
+  //background-image: url(../../images/homer.gif);
   background-repeat: no-repeat;
 }
 .profils_name .heading {
@@ -97,5 +46,4 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: 15%;
->>>>>>> c650560af5d9159e3753b118b5587a0ea8658c97
 }
