--- a/templates/admin/category.html.twig
+++ b/templates/admin/category.html.twig
@@ -7,6 +7,33 @@
 			<div class="profil_title">
 				<h1 class="heading">Gérer les catégories :</h1>
 			</div>
+			<table>
+				<thead>
+					<tr>
+						<th>Catégorie</th>
+						<th>ID</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for category in categories %}
+						<tr>
+							<td>{{ category.name }}</td>
+							<td>{{ category.id }}</td>
+							<td>
+								<a href="{{ path('admin_edit_category', {id: category.id}) }}" class="btn">Editer</a>
+								<form method="post" action="{{ path('admin_delete_category', {id: category.id}) }}">
+									<input type="hidden" name="_method" value="DELETE">
+									<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+									<button class="btn">Supprimer</button>
+								</form>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+			<div class="text-right">
+				<a href="{{ path('admin_new_category') }}" class="btn">Créer une catégorie</a>
+			</div>
 		</diV>
 	</section>
 {% endblock %}
