--- a/templates/admin/editCategory.html.twig
+++ b/templates/admin/editCategory.html.twig
@@ -1,13 +1,13 @@
 {% extends "base.html.twig" %}
-{% block title 'newProduct' %}
+{% block title 'editCategory' %}
 
 {% block body %}
 	<section class="page_profils">
 		<div class="border">
 			<div class="profil_title">
-				<h1 class="heading">Créer un produit :</h1>
+				<h1 class="heading">Editer la catégorie :</h1>
 			</div>
-			{{ include( 'admin/_form.html.twig', {form: form, button : 'Créer'}) }}
+			{{ include( 'admin/_form.html.twig', {form: form, button : 'Editer'}) }}
 		</diV>
 	</section>
 {% endblock %}
