--- a/templates/admin/newCategory.html.twig
+++ b/templates/admin/newCategory.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title 'newProduct' %}
+{% block title 'newCategory' %}
 
 {% block body %}
 	<section class="page_profils">
