--- a/templates/admin/profile.html.twig
+++ b/templates/admin/profile.html.twig
@@ -7,7 +7,7 @@
 	<section class="page_profils">
 		<div class="border">
 			<div class="profil_title">
-				<h1 class="heading">God MOD</h1>
+				<h1 class="heading">Administrateur</h1>
 			</div>
 			<div class="profils">
 				{% if (app.user)%}
@@ -16,16 +16,14 @@
 						<div class="heading un">
 							<span>{{ app.user.username }}</span>
 						</div>
-						<div class="heading un">Vous avez : 666 pts</div>
+						<div class="heading un">Vous avez : 9999 pts</div>
 					</div>
 				{% endif %}
 				<div class="profils_name">
 					<h3 class="heading">Bonjour,</h3>
 					<div class="mb-3 heading">
 						Salut !
-						<span>{{ app.user.username }}</span>,
-																																																								                                tu es connecté en tant qu'admin sale plow !
-						<a href="{{ path('app_logout') }}">Logout</a>
+						<span>{{ app.user.username }}</span>
 					</div>
 					<div class="les_trois_boutons">
 						<div class="gerer_produits">
