--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																		           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																				           and uncomment the following Encore helpers to start using Symfony UX #}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
@@ -21,7 +21,7 @@
 	<body>
 		<header>
 			<a href="{{ path('home') }}" class="logo">
-				<i class="fas fa-utensils"></i>food</a>
+				<i class="fas fa-utensils"></i>DAQ 2.0 Food Truck</a>
 			<div id="menu-bar" class="fas fa-bars"></div>
 
 			<nav class="navbar">
