--- a/templates/admin/profile.html.twig
+++ b/templates/admin/profile.html.twig
@@ -33,7 +33,7 @@
 							<a class="btn" href="{{ path('admin_manage_category') }}">gérer catégories</a>
 						</div>
 						<div class="dernieres_commandes">
-							<a class="btn" href="{{ path('admin_manage_product') }}">dernières commandes</a>
+							<a class="btn" href="">dernières commandes</a>
 						</div>
 					</div>
 				</div>
