--- a/templates/admin/product.html.twig
+++ b/templates/admin/product.html.twig
@@ -23,9 +23,9 @@
 							<td>{{ product.name }}</td>
 							<td>{{ product.price }}</td>
 							<td>
-							{% for categorie in product.category %}
-								{{ categorie.option }}
-							{% endfor %}
+								{% for categorie in product.category %}
+									{{ categorie.name }}
+								{% endfor %}
 							</td>
 							<td>{{ product.ingredient }}</td>
 							<td>
