--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -194,7 +194,7 @@
 
 				<!-- item hamburger-->
 
-				<div class="food-item hamburger" id="hamburger">
+				<div class="food-item hamburger">
 					<div class="food-img">
 						<img src="foods/burger/hamburger.jpg" alt="food image">
 					</div>
