--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,8 +17,7 @@
         	}) }}
 		</div>
 		
-		<audio id="son1" src="{{ asset('build/images/son/sound.mp3') }}"></audio>
-		<button type="submit" class="btn button_register" id="bouton">Envoi la sauce !</button>
+		<button type="submit" class="btn button_register">Envoi la sauce !</button>
 		
 		{{ form_end(registrationForm) }}
 	</div>	
