--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,7 +17,7 @@
 @import './layout/form_Registration.scss';
 @import './layout/form_Login.scss';
 @import './layout/profils.scss';
-
+@import './layout/creatProduct.scss';
 
 
 
