--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -14,7 +14,7 @@
 @import './layout/mediaquery_panier.scss';
 @import './components/bouton_scroll.scss';
 @import './components/boutton.scss';
-@import './layout/form_Registration.scss';
+@import '/assets/styles/layout/form_Registration.scss';
 @import './layout/form_Login.scss';
 @import './layout/profils.scss';
 
