--- a/assets/styles/layout/home.scss
+++ b/assets/styles/layout/home.scss
@@ -42,3 +42,16 @@
     color:#666;
     padding:1rem 0;
   }
+
+  // .quantity ion-icon{
+  //   font-size: 2rem;
+  //   color: red;
+  //   cursor: pointer;
+  // }
+  // .quantity p{
+  //   font-size: 2rem;
+  //   margin-right: 10px;
+  // }
+  // .quantity{
+  //   margin-top: 30px;
+  // }
