--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,11 +2,7 @@
 @import './layout/header.scss';
 @import './layout/home.scss';
 @import './layout/specialites.scss';
-@import './layout/populaire.scss';
 @import './layout/carteAchat.scss';
-@import './layout/paiement.scss';
-@import './layout/galerie.scss';
-@import './layout/avis.scss';
 @import './layout/footer.scss';
 @import './layout/panier.scss';
 @import './layout/page_chargement.scss';
@@ -18,6 +14,9 @@
 @import './layout/form_Login.scss';
 @import './layout/profils.scss';
 @import './layout/creatProduct.scss';
+@import './layout/gerer_produit.scss';
+@import './layout/edit_categorie.scss';
+@import './layout/paiement.scss';
 
 
 
