--- a/templates/admin/product.html.twig
+++ b/templates/admin/product.html.twig
@@ -28,7 +28,7 @@
 								{% endfor %}
 							</td>
 							<td>{{ product.ingredient }}</td>
-							<td>
+							<td class="bouton">
 								<a href="{{ path('admin_edit_product', {id: product.id}) }}" class="btn">Editer</a>
 								<form method="post" action="{{ path('admin_delete_product', {id: product.id}) }}">
 									<input type="hidden" name="_method" value="DELETE">
@@ -41,7 +41,7 @@
 				</tbody>
 			</table>
 			<div class="text-right">
-				<a href="{{ path('admin_new_product') }}" class="btn">Créer un produit</a>
+				<a href="{{ path('admin_new_product') }}" class="btn creer_produit">Créer un produit</a>
 			</div>
 		</diV>
 	</section>
