--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,12 +7,8 @@
 			{% block title %}Food Truck
 			{% endblock %}
 		</title>
-<<<<<<< HEAD
-		{# Run `composer require symfony/webpack-encore-bundle`																																																			           and uncomment the following Encore helpers to start using Symfony UX #}
-=======
-		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																						           and uncomment the following Encore helpers to start using Symfony UX #}
->>>>>>> d43ed405f467d543b70a05c20bdb44e1bf460ebe
+		<<<<<<<HEAD=======>>> {# Run `composer require symfony/webpack-encore-bundle`																																																			           and uncomment the following Encore helpers to start using Symfony UX #} {# Run `composer require symfony/webpack-encore-bundle`
+																																																																						           and uncomment the following Encore helpers to start using Symfony UX #}>>>> d43ed405f467d543b70a05c20bdb44e1bf460ebe
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
