--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,6 +17,7 @@
 @import './layout/gerer_produit.scss';
 @import './layout/edit_categorie.scss';
 @import './layout/paiement.scss';
+@import './layout/edit_product.scss';
 
 
 
