--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -46,7 +46,7 @@
 							{% if option.name == categorie.name %}
 
 						<div class="food-items">
-									<div class="food-item hamburger">
+									<div class="cart_produit">
 										<div class="food-img">
 											{% if product.filename %}
 												<img src="/images/products/{{ product.filename }}" alt="food image">
