--- a/assets/styles/layout/carteAchat.scss
+++ b/assets/styles/layout/carteAchat.scss
@@ -5,10 +5,6 @@
  
   
 }
-.menu img {
-  width: 100%;
-  display: block;
-}
 .menu-head {
   text-align: center;
   color: black;
@@ -22,46 +18,6 @@
   font-size: 2rem;
   padding: 1.8rem 0;
 }
-.menu-btns {
-  padding: 0.6rem 0;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.menu-btn {
-  font-family: var(--Inter);
-  text-transform: uppercase;
-  font-size: 2.5rem;
-  font-weight: 600;
-  background: none;
-  border: none;
-  color: red;
-  display: block;
-  margin: 0 1rem;
-  cursor: pointer;
-  outline: 0;
-  transition: opacity 0.4s ease-out;
-}
-.menu-btn::after {
-  content: "";
-  display: block;
-  height: 2px;
-  margin-left: auto;
-  margin-right: auto;
-  background: green;
-  margin-top: 0.5rem;
-  width: 0;
-  transition: width 0.4s ease-out;
-}
-.menu-btn:hover::after {
-  width: 100%;
-}
-.menu-btn:hover {
-  opacity: 0.8;
-}
-.active-btn {
-  color: green;
-}
 
 .food-items {
   margin: 2rem 0;
@@ -70,38 +26,22 @@
   
   
 }
-.food-item {
-  
+.cart_produit {
   border-radius: 4px;
-  overflow: hidden;
+  
   background: #fff;
   color: #000;
-  margin: 0.6rem 0;
+  
   box-shadow: 0 0 16px -4px rgba(0, 0, 0, 0.75);
-  width: 100%;
-  animation: fadeIn 2s;
 }
-.food-item .btn {
+.cart_produit .btn {
   position: relative;
   float: right;
   margin-top: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
 }
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.food-img img {
-  border-radius: 4px;
-}
-.food-content {
-  padding: 1rem;
-}
+
 .food-name {
   font-family: var(--Inter);
   color: red;
@@ -120,15 +60,8 @@
   font-size: 2rem;
   opacity: 0.8;
 }
-.rating {
-  display: flex;
-  list-style: none;
-  font-size: 2rem;
-}
-.rating .fa-star {
-  margin-right: 0.4rem;
-  color: #5f10d4;
-}
+
+
 .category {
   padding-top: 0.2rem;
   font-size: 2rem;
@@ -138,3 +71,35 @@
 .category span {
   font-weight: 500;
 }
+
+.cart_produit{
+  display: flex; 
+  height: 300px;
+
+}
+.cart_produit .food-img{
+  display: flex;
+}
+.food-content{
+  margin-left: 2rem;
+  width: 100%;
+  max-width: 100%;
+}
+.cart_produit .food-img img{
+  width: 400px;
+  height: 300px;
+}
+#menu{
+display: flex;
+}
+.menu-container{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.food-items{
+  display: flex;
+  flex-direction: column;
+}
+
