--- a/assets/styles/layout/creatProduct.scss
+++ b/assets/styles/layout/creatProduct.scss
@@ -1,7 +1,7 @@
 #product{
     font-size: 2rem;
     margin-top: 3em;
-    margin-bottom: 5em;
+    margin-bottom: 2em;
     width: 50%;
     text-align: center;
     padding-bottom: 4vh;
@@ -18,15 +18,21 @@ input#product_name, input#product_price,
  textarea#product_ingredient{
     font-size: 2.5rem;
     background-color: rgb(235, 235, 235);
-    float: right;
+    
     border: solid 1px red;
     
 }
 textarea#product_ingredient{
-    height: 150px;
+    height: 200px;
 }
 .border{
     text-align: center;
     padding-bottom: 5rem;
     width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+    #product{
+        width: 100%;
+    }
 }
