--- a/assets/styles/layout/form_Registration.scss
+++ b/assets/styles/layout/form_Registration.scss
@@ -11,7 +11,8 @@ input#registration_form_email, input#registration_form_plainPassword_first,
 input#registration_form_plainPassword_second {
     margin-left: 10px;
     font-size: 2rem;
-    background-color: lightgray;
+    border: 1px solid red;
+    float:right;
     
 
 }
