--- a/assets/styles/layout/carteAchat.scss
+++ b/assets/styles/layout/carteAchat.scss
@@ -19,21 +19,35 @@
   padding: 1.8rem 0;
 }
 
+
+
+// 
+
+
+
+
+
+// 
+
+
+
 .food-items {
   margin: 2rem 0;
   padding-bottom: 5%;
   max-width: 100%;
-  
-  
+  display: flex;
+  flex-direction: column;
 }
+
 .cart_produit {
   border-radius: 4px;
-  
   background: #fff;
   color: #000;
-  
   box-shadow: 0 0 16px -4px rgba(0, 0, 0, 0.75);
+  display: flex; 
+  height: 300px;
 }
+
 .cart_produit .btn {
   position: relative;
   float: right;
@@ -49,6 +63,7 @@
   font-size: 2rem;
   text-transform: capitalize;
 }
+
 .line {
   width: 100px;
   height: 3px;
@@ -61,25 +76,22 @@
   opacity: 0.8;
 }
 
-
 .category {
   padding-top: 0.2rem;
   font-size: 2rem;
   font-weight: 800;
   font-family: var(--Inter);
 }
+
 .category span {
   font-weight: 500;
 }
 
-.cart_produit{
-  display: flex; 
-  height: 300px;
 
-}
 .cart_produit .food-img{
   display: flex;
 }
+
 .food-content{
   margin-left: 2rem;
   width: 100%;
@@ -98,8 +110,5 @@ display: flex;
   
 }
 
-.food-items{
-  display: flex;
-  flex-direction: column;
-}
+
 
