--- a/assets/styles/layout/gerer_produit.scss
+++ b/assets/styles/layout/gerer_produit.scss
@@ -11,7 +11,8 @@
 }
 .bouton{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    
 }
 
 .page_profils .border .profil_title{
@@ -28,5 +29,21 @@
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-    
+    width: 100%;
+}
+
+.border thead tr th:nth-of-type(4){
+    display: none;
+}
+.border tbody tr td:nth-of-type(4){
+    display: none;
+}
+
+
+
+
+@media all and (max-width: 550px) {
+    .border tbody .bouton .btn{
+        padding: 0.2rem 1rem;
+    }
 }
