--- a/templates/admin/profile.html.twig
+++ b/templates/admin/profile.html.twig
@@ -22,18 +22,17 @@
 				<div class="profils_name">
 					<h3 class="heading">Bonjour,</h3>
 					<div class="mb-3 heading">
-						Salut !
 						<span>{{ app.user.username }}</span>
 					</div>
 					<div class="les_trois_boutons">
 						<div class="gerer_produits">
-							<a class="btn" href="{{ path('admin_manage_product') }}">Gérer produits</a>
+							<a class="btn" href="{{ path('admin_manage_product') }}">Gérer les Produits</a>
 						</div>
 						<div class="gerer_categories">
-							<a class="btn" href="{{ path('admin_manage_category') }}">gérer catégories</a>
+							<a class="btn" href="{{ path('admin_manage_category') }}">Gérer les Catégories</a>
 						</div>
 						<div class="dernieres_commandes">
-							<a class="btn" href="">dernières commandes</a>
+							<a class="btn" href="">Historiques des  commandes</a>
 						</div>
 					</div>
 				</div>
