--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,9 +10,9 @@
 	<section class="home" id="home">
 
 		<div class="content">
-			<h3>Cuisine faite avec amour et passion!</h3>
-			<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas accusamus tempore temporibus rem amet laudantium animi optio voluptatum. Natus obcaecati unde porro nostrum ipsam itaque impedit incidunt rem quisquam eos!</p>
-			<a href="#card_menu" class="btn">commander</a>
+			<h3>Cuisiner avec Amour et Passion </h3>
+				<p>Composez votre menu sur notre site et venez recuperer votre commande auprès de notre FoodTruck !</p>
+			<a href="#card_menu" class="btn">J'ai faim !</a>
 		</div>
 
 		<div class="image">
@@ -32,7 +32,7 @@
 					Nos
 					<span>Plats !</span>
 				</h1>
-				<p>Vous trouverez ci dessous nos différents plats classés en différentes catégories !</p>
+				<p>Composer votre menu ci-dessous</p>
 			</div>
 			
 		<div class="menu-container">
@@ -91,23 +91,23 @@
 
 	<div class="step-container">
 
-		<h1 class="heading">le
-			<span>fonctionnement</span>
+		<h1 class="heading">La
+			<span>Marche à suivre !</span>
 		</h1>
 
 		<section class="steps">
 
 			<div class="box">
 				<img src="{{ asset('build/images/step-1.jpg') }}" alt="">
-				<h3>choisissez votre plat</h3>
+				<h3>Composez votre Menu</h3>
 			</div>
 			<div class="box">
 				<img src="{{ asset('build/images/step-3.jpg') }}" alt="">
-				<h3>Methode de paiement facile</h3>
+				<h3>Paiement Rapide et Sécurisé</h3>
 			</div>
 			<div class="box">
 				<img src="{{ asset('build/images/step-4.jpg') }}" alt="">
-				<h3>Appréciez votre nourriture !</h3>
+				<h3>Appréciez votre repas !</h3>
 			</div>
 
 		</section>
