--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,7 +7,7 @@
 	<section class="register_form">
 	<div class="formulaire">
 		<div class="title_Register">
-			<h1 class="heading">S'enregistrer</h1>
+			<h1 class="heading">S'inscrire</h1>
 		</div>
 		<div class="form heading">
 			{{ form_start(registrationForm) }}
